--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: "Anita Mihajlova's personal website"
-description: "This website contains Anita Mihajlova's portfolio"
+description: "This website contains Anita Mihajlova's portfolio and resume"
